// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailIntegrationCreateVerification/> render() should render instructions for the activated forwarding email 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/email"
          >
            Email
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          my integration
           
          <span
            class="text-faded"
          >
            myintegration@gorgias.io
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      <i
        class="material-icons"
      />
      Verification in progress...
    </h1>
    <div>
      <div>
        if you've received the verification email but your integration still reads "Verification in progress...", you can manually input the verification code listed in the verification email.
        <br />
        <br />
        <form
          class=""
        >
          <div
            class="InputField form-group"
            color=""
          >
            <label
              class="control-label"
              for="id-code"
            >
              Input verification code manually
            </label>
            <div
              class=""
            >
              <input
                class="field form-control"
                id="id-code"
                placeholder="f69a26"
                type="text"
              />
            </div>
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
            type="submit"
          >
            <span
              class="ui-button-content-a432"
            >
              Verify your integration
            </span>
          </button>
        </form>
        <br />
      </div>
      <p>
        If you haven't set up the forwarding yet, you'll find the instructions 
        <a
          to="/app/settings/channels/email/1/forwarding"
        >
          there
        </a>
        .
        <br />
        If you have setup forwarding after having received the verification email, click on the button below to re-send it.
      </p>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons mr-2"
          >
            mail
          </i>
           Re-send verification email
        </span>
      </button>
      <button
        aria-disabled="false"
        class="wrapper float-right fill destructive medium"
        id="confirm-2"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons icon medium"
        >
          delete
        </i>
        <span
          class="content"
        >
          Delete email address
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<EmailIntegrationCreateVerification/> render() should render instructions for the base email integration 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/email"
          >
            Email
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          my integration
           
          <span
            class="text-faded"
          >
            myintegration@emails.gorgias.com
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      <i
        class="material-icons"
      />
      Verification in progress...
    </h1>
    <div>
      <div
        class="alert warning mb16"
      >
        <div
          class="content"
        >
          <span
            class="label"
          >
            In order to verify your base email integration, you need to verify your own email address. Please check your inbox, you should have received a verification email from us. If you did not, you can re-send this email by
             
            <button
              class="p-0 btn btn-link"
              style="vertical-align: initial;"
              type="button"
            >
              clicking here
            </button>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EmailIntegrationCreateVerification/> render() should render the regular instructions 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/email"
          >
            Email
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          my integration
           
          <span
            class="text-faded"
          >
            myintegration@gorgias.io
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      <i
        class="material-icons"
      />
      Verification in progress...
    </h1>
    <div>
      <div
        class="alert info mb16"
      >
        <div
          class="iconContainer"
        >
          <i
            class="material-icons md-spin"
          >
            autorenew
          </i>
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            We're waiting to receive your verification email on 
            <strong>
              hmq29fh29zfmh29fzq2f3@emails-acme.gorgi.us
            </strong>
            .
          </span>
        </div>
      </div>
      <p>
        If you haven't set up the forwarding yet, you'll find the instructions 
        <a
          to="/app/settings/channels/email/1/forwarding"
        >
          there
        </a>
        .
        <br />
        If you have setup forwarding after having received the verification email, click on the button below to re-send it.
      </p>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons mr-2"
          >
            mail
          </i>
           Re-send verification email
        </span>
      </button>
      <button
        aria-disabled="false"
        class="wrapper float-right fill destructive medium"
        id="confirm-1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons icon medium"
        >
          delete
        </i>
        <span
          class="content"
        >
          Delete email address
        </span>
      </button>
    </div>
  </div>
</div>
`;
